vertical align fix

--- a/app/assets/stylesheets/image_differences.scss
+++ b/app/assets/stylesheets/image_differences.scss
@@ -47,17 +47,16 @@
 }
 
 #img-diff-contain {
-	height: 75vh;
 	position: absolute;
-	top: 5%;
-	left: 5%;
-	right: 5%;
-	bottom: 5%;
+	top: 50%;
+	left: 8%;
+	right: 8%;
+	transform: translateY(-50%);
 	z-index: 1;
 	display: none
 }
 
 #img-1-full {
 	max-width: 100%;
-	height: auto;
+	height: auto
 }
